manifests/ckan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ckan
  labels:
    app: ckan
    app.kubernetes.io/name: ckan
spec:
  selector:
    matchLabels:
      app: ckan
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: ckan
    spec:
      serviceAccountName: ckanserviceaccount
      containers:
        - name: ckan
          image: europe-docker.pkg.dev/dft-rsss-findtransptdata-dev/dft-nap/ckan_295:3a0ab81
          securityContext:
            runAsNonRoot: true
            runAsUser: 92
          resources:
            limits:
               memory: 512Mi
            requests:
               memory: 256Mi
          ports:
            - name: ckan-app  
              containerPort: 5000
          readinessProbe:
            tcpSocket:
              port: ckan-app
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /api/3/action/status_show
              port: ckan-app
              httpHeaders:
              - name: Accept
                value: "*/*"
            initialDelaySeconds: 15
            periodSeconds: 25
            timeoutSeconds: 10
          volumeMounts:
          - name: ckan-data
            mountPath: /var/lib/ckan
            readOnly: false
        # <INSTANCE_CONNECTION> here to include your GCP
        # project, the region of your Cloud SQL instance and the name
        # of your Cloud SQL instance. The format is
        # $PROJECT:$REGION:$INSTANCE
        # [START proxy_container]
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          resources:
            limits:
              memory: 100Mi
            requests:
              memory: 100Mi
          command: ["/cloud_sql_proxy",
                    "-instances=$(INSTANCE_CONNECTION)=tcp:5432",
                    "-credential_file=/secrets/cloudsql/key.json"]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          # [END cloudsql_security_context]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
        # [END proxy_container]
      # [START volumes]
      volumes:
        - name: ckan-data
          persistentVolumeClaim:
            claimName: ckan-pvc
        - name: cloudsql-instance-credentials
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "cloudsql-secrets"
      # [END volumes]
