manifests/datapusher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datapusher-master
spec:
  selector:
    matchLabels:
      run: datapusher
  template:
    metadata:
      labels:
        run: datapusher
    spec:
      containers:
        - name: datapusher-headless
          image: ghcr.io/keitaroinc/datapusher:0.0.17
          securityContext:
            runAsNonRoot: true
            runAsUser: 92
          ports:
           - name: data-app
             containerPort: 8000
             protocol: TCP
