manifests/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solr
spec:
  selector:
    matchLabels:
      run: solr
  template:
    metadata:
      labels:
        run: solr
    spec:
      containers:
        - name: solr
          image: solr:8.11.1
          securityContext:
            runAsNonRoot: true
            runAsUser: 8983
          resources:
             limits:
               memory: 512Mi
             requests:
               memory: 300Mi
          ports:
           - name: solr-app
             containerPort: 8983
             protocol: TCP
          volumeMounts:
          - name: solr-pvc
            mountPath: /var/solr #<--- this is the data dir
            readOnly: false
# mount the init-configmap
          - name: scripts-configmap
            mountPath: /config/script
            readOnly: true
# mount the schema-configmap
          - name: schema-configmap
            mountPath: /config/schema
            readOnly: true
      volumes:
        - name: "solr-pvc"
          persistentVolumeClaim:
            claimName: "solr-pvc"
        - name: scripts-configmap
          configMap:
            name: scripts-configmap
        - name: schema-configmap
          configMap:
            name: schema-configmap
