manifests/ckan-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ckan-service
  labels:
    app: ckan
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: ckan
