manifests/facade-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facade-service
  labels:
    app: facade
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: facade-port
    port: 3000
    targetPort: facade-app
    protocol: TCP
  selector:
    app: facade
#
