manifests/solr-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-headless
spec:
  selector:
    run: solr
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: solr-headless
    port: 8983
    protocol: TCP
    targetPort: solr-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
