manifests/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facade-service
  labels:
    run: facade
  annotations:
#    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
#    cloud.google.com/app-protocols: '{"https":"HTTPS"}'
#    cloud.google.com/app-allow-client-ips: "true"
spec:
  type: LoadBalancer
#  clusterIP: None
  ports:
  - name: facade-port
    port: 3000
    targetPort: facade-app
#    protocol: TCP
  externalTrafficPolicy: Local
  selector:
    app: facade
